--- a/style-test.css
+++ b/style-test.css
@@ -1,90 +1,113 @@
-/*****KONTAKT*****/
-/*****KONTAKT*****/
-/*****KONTAKT*****/
-
-.contact-headline{
-  margin-top: 0;
-  padding-bottom: 0;
+span{
+  color: #ffffff;
+  float: right;
+  padding: 0px;
+  cursor: pointer;
+  font-size: 22px;
 }
 
-#contact-info{
-  width: 90%;
-  margin-top: -220px;
-  background-color: rgb(41, 41, 41, 0.01);
+span:hover{
+  font-weight: 700;
+  color:  rgb(255, 137, 1);
 }
 
-.contact-headline img{
- z-index: -2;
- position: relative;
- opacity: 0.2;
- left: 50%;
+  
+  .hero{
+    margin: 20px 0 0 20px;
+    height: 100px;
 }
 
-.contact-item h2{
-  font-size: 14px;
-}
-
-.contact-item p, #contact-info a{
-  font-size: 10px;
-}
-
-.info-social{
-  height: 120px;
-}
-
-.info-social a i{
-  font-size: 18px;
-}
-
-h3.info-hash{
-  font-size: 13px;
-  color: black;
-}
-
-.form-headline{
-  font-size: 18px;
-  padding: 0;
-  line-height: 1.6;
-}
-
-#weare h2{
-  font-size: 30px;
-}
-
-.personal-info{
-  padding-left: 40px;
-  padding-bottom: 40px;
-}
-
-h3.name{
-  font-size: 35px;
-  padding-top: 10px;
-  padding-bottom: 10px;
-}
-p.description{
-  font-size: 12px;
-}
-
-.person-item{
-  width: 100%;
-}
-
-#banik{
-  flex-direction: column-reverse;
-}
-
-.formcard{
-  width: 90%;
+.logo img{
+  width: 17%;
 }
 
 
-label{
-  font-size: 16px;
-}
-i#form-icon{
-  font-size: 30px;
+  .logo img:hover{
+filter: drop-shadow(0px 0px 5px rgb(255, 137, 1));
+  }
+
+
+  .toggle-btn{
+    width: 180px;
+    margin-top: 30px;
+    }
+
+    .toggle-btn img{
+      width: 20%;
+
+      }
+
+/***MAIN HEADLINE****/
+
+.main-headline{
+    margin-top: 8%;
+    margin-left: 120px;
+
+    
 }
 
-/*****KONTAKT*****/
-/*****KONTAKT*****/
-/*****KONTAKT*****/
+h1.headline{
+    color: #ffffff;
+    font-size: 90px;
+    line-height: 1.4;
+    text-shadow: 2px 2px 5px #818181;
+    filter: drop-shadow(0px 0px 10px 5px rgb(53, 53, 53));
+    margin-bottom: 30px;
+  }
+
+.headline-btn{
+    background-color: #ffffff;
+    color: rgb(66, 66, 66);
+    padding: 20px 50px;
+    font-weight: bolder;
+    border: none;
+    border-radius: 50px;
+    -webkit-transition: all 0.5s ease-in-out;
+    -moz-transition: all 0.5s ease-in-out;
+    -o-transition: all 0.5s ease-in-out;
+    -ms-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
+
+}
+
+.headline-btn:hover{
+
+    border-radius:0 50px;
+    background-color: rgb(255, 137, 1);
+    color: rgb(255, 255, 255);
+
+}
+
+a.headine-btn{
+    font-size: 25px;
+    text-decoration: none;
+    color: black;
+}
+
+.social{
+    margin-right: 80px;
+    text-align: right;
+    margin-bottom: 50px;
+}
+
+.social a{
+    color: #ffffff;
+    font-size: 35px;
+    padding: 30px;
+}
+
+.social a:hover{
+color:  rgb(255, 137, 1);
+}
+
+h2.hash{
+    color: #ffffff;
+    font-size: 25px;
+    padding: 30px;
+    text-shadow: 3px 3px 3px rgba(82, 82, 82);
+}
+
+.devider1{
+width: 100%;
+height: 60px;
+}
