--- a/style.css
+++ b/style.css
@@ -56,7 +56,9 @@ a{
   
   /* When you mouse over the navigation links, change their color */
   .overlay a:hover, .overlay a:focus {
-    color: #f1f1f1;
+    color: rgb(255, 137, 1);
+    filter: drop-shadow(0px 0px 15px rgb(250, 250, 250));
+
   }
   
   /* Position the close button (top right corner) */
@@ -80,9 +82,9 @@ a{
   span{
       color: #ffffff;
       float: right;
-      padding: 10px 0px 0 0;
+      padding: 0px;
       cursor: pointer;
-      font-size: 25px;
+      font-size: 22px;
   }
   
   span:hover{
@@ -108,16 +110,13 @@ a{
 
     .hero{
         margin: 20px 0 0 20px;
-        height: 120px;
+        height: 100px;
     }
-    .logo{
-        display: inline;
-      }
+
+    .logo img{
+      width: 17%;
+    }
   
-      .logo img{
-        float: left;
-        margin-left: 20px;
-      }
 
       .logo img:hover{
  filter: drop-shadow(0px 0px 5px rgb(255, 137, 1));
@@ -125,19 +124,19 @@ a{
 
 
       .toggle-btn{
-        width: 140px;
+        width: 180px;
         margin-top: 30px;
         }
 
         .toggle-btn img{
-          width: 25%;
+          width: 20%;
 
           }
 
     /***MAIN HEADLINE****/
 
     .main-headline{
-        margin-top: 15%;
+        margin-top: 8%;
         margin-left: 120px;
   
         
@@ -145,15 +144,18 @@ a{
 
     h1.headline{
         color: #ffffff;
-        font-size: 70px;
-        line-height: 100px;
+        font-size: 90px;
+        line-height: 1.4;
         text-shadow: 2px 2px 5px #818181;
-        filter: drop-shadow(3px 3px 5px rgb(0,0,0) );
-        margin-bottom: 20px;
+        filter: drop-shadow(0px 0px 10px 5px rgb(53, 53, 53));
+        margin-bottom: 30px;
       }
 
     .headline-btn{
         background-color: #ffffff;
+        color: rgb(66, 66, 66);
+        padding: 20px 50px;
+        font-weight: bolder;
         border: none;
         border-radius: 50px;
         -webkit-transition: all 0.5s ease-in-out;
@@ -168,20 +170,20 @@ a{
     
         border-radius:0 50px;
         background-color: rgb(255, 137, 1);
+        color: rgb(255, 255, 255);
     
     }
     
-    a.headline-btn{
-        font-size: 20px;
-        padding: 20px 40px;
+    a.headine-btn{
+        font-size: 25px;
         text-decoration: none;
         color: black;
     }
 
     .social{
-        float: right;
         margin-right: 80px;
         text-align: right;
+        margin-bottom: 50px;
     }
 
     .social a{
@@ -196,13 +198,14 @@ a{
 
     h2.hash{
         color: #ffffff;
-        font-size: 18px;
-    
+        font-size: 25px;
+        padding: 30px;
+        text-shadow: 3px 3px 3px rgba(82, 82, 82);
     }
 
 .devider1{
     width: 100%;
-    height: 40px;
+    height: 60px;
 }
 
 
